# mcp-server-cvdlt

./: .gitignore  README.md  README_CN.md  pyproject.toml  requirement.txt  server.py
checkpoints/: README.md
ultralytics/nn/modules/: head.py
