[project]
name = "yolo-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "mcp>=1.6.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
]
